objects/Order.object
<CustomObject>
    <fields>
        <fullName>account_crm_region__c</fullName>
        <formula>TEXT(Account.account_crm_region__c)</formula>
        <label>Account CRM Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>account_vi_region__c</fullName>
        <formula>TEXT(Account.account_vi_region__c)</formula>
        <label>Account VI Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>address_verified__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Verification status of the address selected for CM Order, based on the selected Patient record</description>
        <inlineHelpText>Verification status of the selected Patient address</inlineHelpText>
        <label>Address Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>afib__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AFIB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>atrial_tachycadria__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Atrial Tachycadria</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>biosmart_id__c</fullName>
        <externalId>true</externalId>
        <label>BIOSMART ID</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>brady_gross_sales__c</fullName>
        <inlineHelpText>Shows the total unit price of Brady items on the Order.</inlineHelpText>
        <label>Brady Gross Sales</label>
        <summarizedField>OrderItem.UnitPrice</summarizedField>
        <summaryFilterItems>
            <field>OrderItem.main_group__c</field>
            <operation>equals</operation>
            <value>Bradycardia</value>
        </summaryFilterItems>
        <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>brady_leads__c</fullName>
        <description>Shows the number of Brady Leads used on the Order.</description>
        <label>Brady Leads</label>
        <summaryFilterItems>
            <field>OrderItem.product_type__c</field>
            <operation>equals</operation>
            <value>Lead</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>OrderItem.main_group__c</field>
            <operation>equals</operation>
            <value>Bradycardia</value>
        </summaryFilterItems>
        <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>brady_projected_net_sales__c</fullName>
        <formula>brady_gross_sales__c * 0.9725</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Shows the Brady Gross Sales minus 2.75%.</inlineHelpText>
        <label>Brady Projected Net Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>brady_tachy_syndrome__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Brady/Tachy Syndrome</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>brady_units__c</fullName>
        <inlineHelpText>Shows the number of Brady units used in the Order.</inlineHelpText>
        <label>Brady Units</label>
        <summaryFilterItems>
            <field>OrderItem.product_type__c</field>
            <operation>equals</operation>
            <value>CRT-D, CRT-P, ICD, Pacemaker</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>OrderItem.main_group__c</field>
            <operation>equals</operation>
            <value>Bradycardia</value>
        </summaryFilterItems>
        <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>cardiomessenger_units__c</fullName>
        <description>Used in reporting.</description>
        <label>CardioMessenger Units</label>
        <summaryFilterItems>
            <field>OrderItem.product_type__c</field>
            <operation>equals</operation>
            <value>Cardio Messenger</value>
        </summaryFilterItems>
        <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>cas_validation_completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CAS validation completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cash_on_delivery__c</fullName>
        <formula>IF(  Account.cod__c  , IMAGE(&quot;/img/icon/cash32.png&quot;, &quot;&quot;), &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cash on Delivery</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>chf__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CHF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>comments_ship_to__c</fullName>
        <label>Comments (Ship to)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>date_address_verified__c</fullName>
        <description>Date of the verification of the selected Patient address, automatically updated</description>
        <inlineHelpText>Verification date of the selected Patient Address</inlineHelpText>
        <label>Date Address Verified</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>date_cm_approved__c</fullName>
        <label>Date CM Approved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>date_cm_shipped__c</fullName>
        <description>Used for setting time stamp when the CM was shipped.</description>
        <label>Date CM Shipped</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>date_cm_submitted__c</fullName>
        <description>Used for setting time stamp when the CM was submitted.</description>
        <label>Date CM Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>date_po_entered__c</fullName>
        <label>Date PO Entered</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>days_since_procedure__c</fullName>
        <formula>TODAY() - implant_date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Procedure</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>diagnostic_gross_sales__c</fullName>
        <inlineHelpText>Shows the total unit price of Diagnostic items on the Order.</inlineHelpText>
        <label>Diagnostic Gross Sales</label>
        <summarizedField>OrderItem.UnitPrice</summarizedField>
        <summaryFilterItems>
            <field>OrderItem.main_group__c</field>
            <operation>equals</operation>
            <value>Diagnostic</value>
        </summaryFilterItems>
        <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>diagnostic_projected_net_sales__c</fullName>
        <formula>diagnostic_gross_sales__c * 0.9725</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Shows the Diagnostic Gross Sales minus 2.75%.</inlineHelpText>
        <label>Diagnostic Projected Net Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>diagnostic_units__c</fullName>
        <inlineHelpText>The number of Diagnostic units on the Order.</inlineHelpText>
        <label>Diagnostic Units</label>
        <summaryFilterItems>
            <field>OrderItem.product_type__c</field>
            <operation>equals</operation>
            <value>CRT-D, CRT-P, ICD, Loop Recorder, Pacemaker</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>OrderItem.main_group__c</field>
            <operation>equals</operation>
            <value>Diagnostic</value>
        </summaryFilterItems>
        <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>division_mdrf__c</fullName>
        <formula>IF(
AND(
brady_units__c &gt; diagnostic_units__c, 
brady_units__c &gt; tachy_units__c),
&quot;Bradycardia&quot;,

IF(
AND(
tachy_units__c &gt; brady_units__c,
tachy_units__c &gt; diagnostic_units__c),
&quot;Tachycardia&quot;,

IF(
cardiomessenger_units__c &gt; 0,
&quot;Bradycardia&quot;,

IF(
AND(
diagnostic_units__c &gt; brady_units__c, 
diagnostic_units__c &gt; tachy_units__c),
&quot;Diagnostic&quot;,

IF(
AND(
tachy_leads__c = 0,
brady_leads__c = 0),
&quot;Bradycardia&quot;,

IF(
tachy_leads__c &gt; 0,
&quot;Tachycardia&quot;,

IF(
brady_leads__c &gt; 0,
&quot;Bradycardia&quot;,

&quot;Diagnostic&quot;)))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Division (MDRF)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>division_number_mdrf__c</fullName>
        <formula>IF(
AND(
brady_units__c &gt; diagnostic_units__c, 
brady_units__c &gt; tachy_units__c),
&quot;10&quot;,

IF(
AND(
tachy_units__c &gt; brady_units__c,
tachy_units__c &gt; diagnostic_units__c),
&quot;20&quot;,

IF(
cardiomessenger_units__c &gt; 0,
&quot;10&quot;,

IF(
AND(
diagnostic_units__c &gt; brady_units__c, 
diagnostic_units__c &gt; tachy_units__c),
&quot;05&quot;,

IF( 
AND( 
tachy_leads__c = 0, 
brady_leads__c = 0), 
&quot;10&quot;,

IF( 
tachy_leads__c &gt; 0, 
&quot;20&quot;, 

IF( 
brady_leads__c &gt; 0, 
&quot;10&quot;, 

&quot;05&quot;)))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Division Number (MDRF)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>donation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Donation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>donation_reviewed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Donation reviewed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>external_id__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>following_physican__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Following Physician</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Physician</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Orders (Following Physican)</relationshipLabel>
        <relationshipName>Orders1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>implant_date__c</fullName>
        <description>Defines the date of the implant procedure.</description>
        <inlineHelpText>Date of the Implant Procedure</inlineHelpText>
        <label>Implant date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>implanting_physician__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Implanting Physician</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Physician</value>
            </filterItems>
            <filterItems>
                <field>Contact.Account.status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Orders (Implanting Physician)</relationshipLabel>
        <relationshipName>Orders3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inventory_review_completed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to track whether CS-Team has reviewed for device-tracking purposes</description>
        <label>Customer Solutions Review Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>invoice_unpaid_over_credit_limit__c</fullName>
        <description>Displays a soft warning if the implanting facility is past due on unpaid invoices or over their credit limit.</description>
        <formula>Account.invoice_unpaid__c || Account.over_credit_limit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Unpaid/Over Credit Limit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>is_locked__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether an order is locked by order submission job</description>
        <label>IsLocked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mdrf_is_mine__c</fullName>
        <formula>IF(
OR(
rep_at_implant__r.Id = $User.Id,
rep_for_credit__r.Id = $User.Id),
1,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MDRF Is Mine</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mdrf_reimport_timestamp__c</fullName>
        <description>This field will be used to re import the MDRF.</description>
        <label>MDRF Reimport Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>medical_record_no__c</fullName>
        <description>Unique identifier issued to the patient by the hospital</description>
        <label>Medical Record No.</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mi__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>no_rep_present_at_implant__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The system must allow the user entering the MDRF to indicate that BIOTRONIK representative was not present at the implant.</description>
        <label>No Rep present at implant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>num_cm_products__c</fullName>
        <label>Number of Cardio Messenger Products</label>
        <summaryFilterItems>
            <field>OrderItem.product_type__c</field>
            <operation>equals</operation>
            <value>Cardio Messenger</value>
        </summaryFilterItems>
        <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>num_hm_products__c</fullName>
        <label>Number of Home Monitoring Products</label>
        <summaryFilterItems>
            <field>OrderItem.model_no__c</field>
            <operation>equals</operation>
            <value>358364</value>
        </summaryFilterItems>
        <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>one_hb__c</fullName>
        <defaultValue>false</defaultValue>
        <label>1° HB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>order_owner_queue_value__c</fullName>
        <description>This Formula text return the owner queue Name that we will used for filtring orders that are pushed to the queue.</description>
        <formula>Owner:Queue.QueueName</formula>
        <label>Order Owner Queue Value</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ous_patient__c</fullName>
        <description>Auto-displayed on the MDRF when the related Patient marked OUS</description>
        <formula>patient__r.ous_patient__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OUS Patient</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>patient__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Patient</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Patient</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Orders (Patient)</relationshipLabel>
        <relationshipName>Orders2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>patient_verified__c</fullName>
        <description>Value of the comparable field in the related Patient record auto-displayed in this CM Order Formula based checkbox.</description>
        <formula>patient__r.contact_verified__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Patient Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pricebook__c</fullName>
        <label>Pricebook</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CRM</fullName>
                </value>
                <value>
                    <fullName>CVI</fullName>
                </value>
                <value>
                    <fullName>PVI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>reached_cancelled_status__c</fullName>
        <label>Reached Cancelled Status</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>reached_invoiced_status__c</fullName>
        <label>Reached Invoiced Status</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>reached_processing_status__c</fullName>
        <label>Reached Processing Status</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>reached_submitted_status__c</fullName>
        <label>Reached Submitted Status</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>referring_physician__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Physician who referred the patient</description>
        <label>Referring Physician</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Physician</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Orders (Referring Physician)</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rep_at_implant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>BIOTRONIK representative (Sales Rep, FCS) CONTACT record in attendance at the implant</description>
        <label>Rep at implant</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Orders1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rep_for_credit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rep for Credit</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sap_billing_block__c</fullName>
        <description>Billing block number returned from SAP</description>
        <label>SAP Billing Block</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sap_company_code__c</fullName>
        <label>Company Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Company_Code</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>sap_error_message__c</fullName>
        <description>Text of error message returned from SAP</description>
        <label>SAP Error Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sap_inquiry_no__c</fullName>
        <description>Inquiry number returned from SAP</description>
        <label>SAP Inquiry No</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sap_invoice_no__c</fullName>
        <description>Invoice number returned from SAP</description>
        <label>SAP Invoice No</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sap_order_no__c</fullName>
        <description>Order number returned from SAP</description>
        <label>SAP Order No</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>scd__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SCD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ship_to__c</fullName>
        <description>Used to define the shipment address for the CM in case no direct hand-out. Picklist values: Mailing Address, Shipping Address, Direct Hand-out</description>
        <label>Ship to</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Direct Hand-out</fullName>
                </value>
                <value>
                    <fullName>Direct Ship</fullName>
                </value>
                <value>
                    <fullName>Direct Ship Replacement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sick_sinus_syndrome__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sick Sinus Syndrome</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sinus_arrest__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sinus Arrest</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sinus_bradycardia__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sinus Bradycardia</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>submission_attempts__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Technical Field. Number of attempts to submit the order to SAP.</description>
        <label>Submission Attempts</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>submit_to_sap__c</fullName>
        <defaultValue>false</defaultValue>
        <description>checkbox which triggers the status change to &apos;Submitted&apos; and Submission process to SAP</description>
        <label>Submit to SAP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>submitted_date__c</fullName>
        <description>Timestamp of when the user submitted the order</description>
        <label>Submitted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>tachy_gross_sales__c</fullName>
        <inlineHelpText>Shows the total unit price of Tachy items on the Order.</inlineHelpText>
        <label>Tachy Gross Sales</label>
        <summarizedField>OrderItem.UnitPrice</summarizedField>
        <summaryFilterItems>
            <field>OrderItem.main_group__c</field>
            <operation>equals</operation>
            <value>Tachycardia</value>
        </summaryFilterItems>
        <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>tachy_leads__c</fullName>
        <description>Shows the number of Tachy Leads used in the Order.</description>
        <label>Tachy Leads</label>
        <summaryFilterItems>
            <field>OrderItem.product_type__c</field>
            <operation>equals</operation>
            <value>Lead</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>OrderItem.main_group__c</field>
            <operation>equals</operation>
            <value>Tachycardia</value>
        </summaryFilterItems>
        <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>tachy_projected_net_sales__c</fullName>
        <formula>tachy_gross_sales__c * 0.9725</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Shows the Tachy Gross Sales minus 2.75%.</inlineHelpText>
        <label>Tachy Projected Net Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>tachy_units__c</fullName>
        <inlineHelpText>Shows the number of Tachy devices on the Order.</inlineHelpText>
        <label>Tachy Units</label>
        <summaryFilterItems>
            <field>OrderItem.product_type__c</field>
            <operation>equals</operation>
            <value>CRT-D, CRT-P, ICD, Pacemaker</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>OrderItem.main_group__c</field>
            <operation>equals</operation>
            <value>Tachycardia</value>
        </summaryFilterItems>
        <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>three_hc_chb__c</fullName>
        <defaultValue>false</defaultValue>
        <label>3° HB/CHB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>time_to_po__c</fullName>
        <formula>date_po_entered__c -implant_date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The number of days between the date the PO was entered and the implant date.</inlineHelpText>
        <label>Time to PO</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>time_to_submit__c</fullName>
        <formula>DATEVALUE(submitted_date__c) - implant_date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time to Submit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tracking_no__c</fullName>
        <description>Tracking number for CMDS shipments.</description>
        <label>Tracking No.</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>two_hb__c</fullName>
        <defaultValue>false</defaultValue>
        <label>2° HB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>validation_reason__c</fullName>
        <description>Auto-filled comment field to create task description lines for CAS</description>
        <label>Validation Reason</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Price Discrepancy Reason = Bulk swap</fullName>
                </value>
                <value>
                    <fullName>Implanting facility in Puerto Rico**</fullName>
                </value>
                <value>
                    <fullName>Alphanumeric PO Number**</fullName>
                </value>
                <value>
                    <fullName>Donation**</fullName>
                </value>
                <value>
                    <fullName>Bulk Product with Price &gt; $0</fullName>
                </value>
                <value>
                    <fullName>Part of System &amp; Price &gt; $0</fullName>
                </value>
                <value>
                    <fullName>$0 Product outside System</fullName>
                </value>
                <value>
                    <fullName>Unverified physician</fullName>
                </value>
                <value>
                    <fullName>Device with no leads</fullName>
                </value>
                <value>
                    <fullName>Patient Shipping Address is P.O. Box</fullName>
                </value>
                <value>
                    <fullName>Unverified Patient Shipping Address</fullName>
                </value>
                <value>
                    <fullName>Lead with no Device</fullName>
                </value>
                <value>
                    <fullName>Device with only one Lead</fullName>
                </value>
                <value>
                    <fullName>More than 1 Device on MDRF</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vf__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VT</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllOrders</fullName>
        <columns>ORDERS.ORDER_NUMBER</columns>
        <columns>implant_date__c</columns>
        <columns>patient__c</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>ORDERS.STATUS</columns>
        <filterScope>Everything</filterScope>
        <label>All Orders</label>
        <sharedTo>
            <roleAndSubordinates>US_National_Manager</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Customer_Solution_Review_Brady</fullName>
        <columns>ORDERS.ORDER_NUMBER</columns>
        <columns>validation_reason__c</columns>
        <columns>implant_date__c</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>rep_at_implant__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>inventory_review_completed__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>division_mdrf__c</field>
            <operation>equals</operation>
            <value>Bradycardia</value>
        </filters>
        <label>Customer Solutions Review - Brady</label>
        <sharedTo>
            <role>BINC_Customer_Solutions</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Customer_Solution_Review_Diagnostic</fullName>
        <columns>ORDERS.ORDER_NUMBER</columns>
        <columns>validation_reason__c</columns>
        <columns>implant_date__c</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>rep_at_implant__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>inventory_review_completed__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>division_mdrf__c</field>
            <operation>equals</operation>
            <value>Diagnostic</value>
        </filters>
        <label>Customer Solutions Review - Diagnostic</label>
        <sharedTo>
            <role>BINC_Customer_Solutions</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Customer_Solution_Review_Other_Div</fullName>
        <columns>ORDERS.ORDER_NUMBER</columns>
        <columns>validation_reason__c</columns>
        <columns>implant_date__c</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>rep_at_implant__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>inventory_review_completed__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>division_mdrf__c</field>
            <operation>notEqual</operation>
            <value>Bradycardia,Diagnostic,Tachycardia</value>
        </filters>
        <label>Customer Solutions Review - Other Div</label>
        <sharedTo>
            <role>BINC_Customer_Solutions</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Customer_Solution_Review_Tachy</fullName>
        <columns>ORDERS.ORDER_NUMBER</columns>
        <columns>validation_reason__c</columns>
        <columns>implant_date__c</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>rep_at_implant__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>inventory_review_completed__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>division_mdrf__c</field>
            <operation>equals</operation>
            <value>Tachycardia</value>
        </filters>
        <label>Customer Solutions Review - Tachy</label>
        <sharedTo>
            <role>BINC_Customer_Solutions</role>
        </sharedTo>
    </listViews>
</CustomObject>